fix flicker

--- a/starters/tailwind/src/Toast.css
+++ b/starters/tailwind/src/Toast.css
@@ -4,12 +4,14 @@
 
 ::view-transition-old(.toast):only-child {
   animation: slide-out 400ms;
+  animation-fill-mode: forwards;
 }
 
 @keyframes slide-out {
   to {
     translate: 100% 0;
     opacity: 0;
+    visibility: hidden;
   }
 }
 
